#set($symbol_dollar = '$')
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>${groupId}</groupId>
    <artifactId>parent</artifactId>
    <version>${version}</version>
  </parent>

  <artifactId>modules</artifactId>
  <packaging>pom</packaging>
  
  <name>${name} - connector modules</name>

  <modules>
   <!-- add individual connector modules here -->
  </modules>

  <repositories>
    <repository>
      <id>m2e</id>
      <layout>p2</layout>
      <url>http://download.eclipse.org/technology/m2e/milestones/1.0</url>
    </repository>
    <repository>
      <id>helios</id>
      <layout>p2</layout>
      <url>http://download.eclipse.org/releases/helios</url>
    </repository>
    <repository>
      <id>swtbot</id>
      <layout>p2</layout>
      <url>http://download.eclipse.org/technology/swtbot/helios/dev-build/update-site</url>
    </repository>    
  </repositories>

  <build>
    <plugins>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>target-platform-configuration</artifactId>
        <version>${symbol_dollar}{tycho-version}</version>
        <configuration>
          <target>
            <groupId>${groupId}</groupId>
            <artifactId>target-platform</artifactId>
            <version>${version}</version>
            <classifier>e36-m2e100</classifier>
          </target>
          <environments>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86</arch>
            </environment>
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86_64</arch>
            </environment>
          </environments>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-surefire-plugin</artifactId>
          <version>${symbol_dollar}{tycho-version}</version>
          <configuration>
            <appArgLine>-pluginCustomization ${basedir}/plugin_customization.ini</appArgLine>            
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.eclipse.tycho</groupId>
          <artifactId>tycho-compiler-plugin</artifactId>
          <version>${symbol_dollar}{tycho-version}</version>
          <configuration>
            <source>1.5</source>
            <target>1.5</target>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>sun-jvm</id>
      <activation>
        <property>
          <name>java.vendor.url</name>
          <value>http://java.sun.com/</value>
        </property>
      </activation>
      <properties>
        <tycho.test.jvmArgs>-Xmx800m -XX:MaxPermSize=256m</tycho.test.jvmArgs>
      </properties>
    </profile>
  </profiles>
</project>
